--- a/index.html
+++ b/index.html
@@ -4,7 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+
+  <body>
+      <header class="header">
+        <nav class="header_menu">
+          <ul class="header_links_list">
+            <li class="header_menu_item header_menu_item_active">
+              <a href="#0" class="header_links"></a>
+              главная
+            </li>
+            <li class="header_menu_item">
+              <a href="#0" class="header_links"></a>
+              посмотреть лоты
+            </li>
+            <li class="header_menu_item">
+              <a href="#0" class="header_links"></a>
+              об аукционе
+            </li>
+          </ul>
+        </nav>
+        <div class="header_logo">
+          <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо"> 
+        </div>
+        <div class="address">
+          <address class="header_adress">
+            <ul class="header_adress_list">
+              <li>
+                <a href="tel:+99995555555" class="header_adress_item_links">+9 999 555 5555</a>
+              </li>
+              <li>
+                <a href="mailto:info@sobaka.ge" class="header_adress_item_links">info@sobaka.ge</a>
+              </li>
+              <li> 
+              наб. Принсенграхт 263- 265, Амстердам
+              </li>
+            </ul>
+            
+          </address>
+        </div>
+    </header>
+
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+
+    <footer>
+      <address></address>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+      </div>
+    </footer>
+
+  </body>
 </html>
