--- a/index.html
+++ b/index.html
@@ -49,10 +49,25 @@
         </div>
     </header>
 
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
+    <main class="cover">
+      <div class="overlay"></div>
+      <section class="cover_title">
+        <h1 class="cover_text">
+        <span class="aligned_text">оно</span>
+        <span class="aligned_text aligned_text_center">тебе</span>
+        <span class="aligned_text aligned_text_right">надо</span>
+      </h1>
+      </section>
+      <section class="cover_description">
+        <p class="cover_description_text">
+          Аукцион вещей, вкоторые никто не верил
+        </p>
+        <button class="bet_button">Сделать ставку</button>
+      </section>
+      
+      <section class="lots">
+        
+      </section>
     </main>
 
     <footer>
