--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="mailto:info@sobaka.ge" class="header_adress_item_links">info@sobaka.ge</a>
               </li>
               <li> 
-              наб. Принсенграхт 263- 265, Амстердам
+              наб. Принсенграхт 263- <br>265, Амстердам
               </li>
             </ul>
             
@@ -145,17 +145,47 @@
       </div>
     </main>
 
-    <footer>
-      <address></address>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+    <footer class="footer">
+      <address class="address footer_adress">
+        <ul class="header_adress_list">
+        <li>
+          <a href="tel:+99995555555" class="header_adress_item_links">+9 999 555 5555</a>
+        </li>
+        <li>
+          <a href="mailto:info@sobaka.ge" class="header_adress_item_links">info@sobaka.ge</a>
+        </li>
+        <li> 
+        наб. Принсенграхт 263- 265, 
+        <br>Амстердам
+        </li>
       </ul>
-      <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+    </address>
+    <nav class="footer_menu">
+      <ul class="footer_links_list">
+        <li class="footer_menu_item footer_menu_item_active">
+          <a href="#0" class="footer_links"></a>
+          главная
+        </li>
+        <li class="footer_menu_item">
+          <a href="#0" class="footer_links"></a>
+          посмотреть лоты
+        </li>
+        <li class="footer_menu_item">
+          <a href="#0" class="footer_links"></a>
+          об аукционе
+        </li>
+      </ul>
+    </nav>
+      <div class="footer_image">
+        <a href="#0">
+          <img class="footer_image_link" src="./images/yt.svg" alt="ссылка на youtub">
+        </a>
+        <a href="#0">
+          <img class="footer_image_link" src="./images/vk.svg" alt="ссылка на ВКонтакте">
+        </a>
+        <a href="#0">
+          <img class="footer_image_link" src="./images/pinterest.svg" alt="Ссылка на pinterest">
+        </a>
       </div>
     </footer>
 
