--- a/index.html
+++ b/index.html
@@ -176,17 +176,23 @@
         </li>
       </ul>
     </nav>
-      <div class="footer_image">
-        <a href="#0">
-          <img class="footer_image_link" src="./images/yt.svg" alt="ссылка на youtub">
+      <ul class="footer_social_link_list">
+        <li class="footer_social_list_item">
+          <a class="footer_social_link" href="#0">
+          <img class="footer_social_icon" src="./images/yt.svg" alt="ссылка на youtub">
         </a>
-        <a href="#0">
-          <img class="footer_image_link" src="./images/vk.svg" alt="ссылка на ВКонтакте">
+      </li>
+        <li class="footer_social_list_item">
+          <a class="footer_social_link" href="#0">
+          <img class="footer_social_icon" src="./images/vk.svg" alt="ссылка на ВКонтакте">
         </a>
-        <a href="#0">
-          <img class="footer_image_link" src="./images/pinterest.svg" alt="Ссылка на pinterest">
+      </li>
+        <li class="footer_social_list_item">
+          <a class="footer_social_link" href="#0">
+          <img class="footer_social_icon" src="./images/pinterest.svg" alt="Ссылка на pinterest">
         </a>
-      </div>
+      </li>  
+      </ul>
     </footer>
 
   </body>
