Исправлены указанные ошибки

--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@
         <nav class="header_menu">
           <ul class="header_links_list">
             <li class="header_menu_item header_menu_item_active">
-              <a href="#0" class="header_links"></a>
+              <a href="#0" class="header_links">
               главная
+            </a>
             </li>
             <li class="header_menu_item">
-              <a href="#0" class="header_links"></a>
+              <a href="#0" class="header_links">
               посмотреть лоты
+            </a>
             </li>
             <li class="header_menu_item">
-              <a href="#0" class="header_links"></a>
+              <a href="#0" class="header_links">
               об аукционе
+            </a>
             </li>
           </ul>
         </nav>
-        <div class="header_logo">
-          <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо"> 
-        </div>
+        <a class="header_logo" href="#0">
+          <img src="./images/logo-black.svg" alt="Оно тебе надо"> 
+        </a>
         <div class="address">
           <address class="header_adress">
-            <ul class="header_adress_list">
+            <ul class="no_bullit">
               <li>
                 <a href="tel:+99995555555" class="header_adress_item_links">+9 999 555 5555</a>
               </li>
@@ -41,7 +44,8 @@
                 <a href="mailto:info@sobaka.ge" class="header_adress_item_links">info@sobaka.ge</a>
               </li>
               <li> 
-              наб. Принсенграхт 263- <br>265, Амстердам
+              <p>наб. Принсенграхт 263- </p>
+              <p>265, Амстердам</p>
               </li>
             </ul>
             
@@ -113,19 +117,18 @@
               </article>
             </li>
           </ul>
-        <article class="more">
-          <a href="#0">
-          <p>посмотреть больше</p></a>
-        </article>
+          <a class="more" href="#0">
+            посмотреть больше
+        </a>
       </section>
       <div class="about">
         <div class="about_logo">
           <img class="about_logo_image" src="./images/logo-white.svg" alt="логотип Оно тебе надо">
       </div>
       <section class="about_column">
-        <h3 class="about_title">
+        <h2 class="about_title">
           Об аукционе
-        </h3>
+        </h2>
         <div class="about_text">
         <p >
           Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
@@ -147,7 +150,7 @@
 
     <footer class="footer">
       <address class="address footer_adress">
-        <ul class="header_adress_list">
+        <ul class="no_bullit">
         <li>
           <a href="tel:+99995555555" class="header_adress_item_links">+9 999 555 5555</a>
         </li>
@@ -155,24 +158,31 @@
           <a href="mailto:info@sobaka.ge" class="header_adress_item_links">info@sobaka.ge</a>
         </li>
         <li> 
-        наб. Принсенграхт 263- 265, 
-        <br>Амстердам
+        <p>
+          наб. Принсенграхт 263- 265,
+        </p>
+        <p>
+          Амстердам
+        </p>
         </li>
       </ul>
     </address>
     <nav class="footer_menu">
       <ul class="footer_links_list">
         <li class="footer_menu_item footer_menu_item_active">
-          <a href="#0" class="footer_links"></a>
+          <a href="#0" class="footer_links">
           главная
+        </a>
         </li>
         <li class="footer_menu_item">
-          <a href="#0" class="footer_links"></a>
+          <a href="#0" class="footer_links">
           посмотреть лоты
+        </a>
         </li>
         <li class="footer_menu_item">
-          <a href="#0" class="footer_links"></a>
+          <a href="#0" class="footer_links">
           об аукционе
+        </a>
         </li>
       </ul>
     </nav>
